SH: Fixed figure overflow in Safari, ran grunt final

--- a/app/oscitk/themes/Simple_Horizontal/styles/_section.scss
+++ b/app/oscitk/themes/Simple_Horizontal/styles/_section.scss
@@ -6,7 +6,7 @@
     white-space: nowrap;
 
     > * {
-    	white-space: normal;
+    	white-space: initial;
     	display: inline-block;
     }
 
